--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://vietnix.datvu.tech:9700/goword
+    url: jdbc:postgresql://goword.datvu.tech:9700/goword
     username: goword
     password: 123456Aa@
   jpa:
@@ -12,7 +12,6 @@ spring:
         '[format_sql]': true
 
   flyway:
-    ignore-migration-patterns: '*:missing'
     validate-on-migrate: false
 app:
   storage_dir: /home/vutiendat3601/goword
