--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -44,6 +44,11 @@
       "name": "app.static_resource_url",
       "type": "java.lang.String",
       "description": "A description for 'app.static_resource_url'"
+    },
+    {
+      "name": "app.static_host",
+      "type": "java.lang.String",
+      "description": "A description for 'app.static_host'"
     }
   ]
 }
