fix: website config

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -15,6 +15,7 @@ ENV MAIL_HOST=
 ENV MAIL_PORT=
 ENV MAIL_USER=
 ENV MAIL_PASS=
+ENV WEBSITE=
 
 EXPOSE 9800
 CMD java -jar -Dspring.profiles.active=${PROFILE} /opt/goword/goword-api-1.0.0.jar
